# arduino-plotter

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml  msrv.yml
examples/: minimal.rs  run.rs
src/: api.rs  lib.rs  main.rs  protocol.rs
